# s4_ecs

./: .todo  CMakeLists.txt
example/: CMakeLists.txt
example/src/: main.cpp
src/: CMakeLists.txt
src/ecs/: component.hpp  ecs.hpp  entity.hpp  manager.cpp  manager.hpp
test/: CMakeLists.txt
test/src/: manager.cpp
